--- a/versions/1.21.1/gradle.properties
+++ b/versions/1.21.1/gradle.properties
@@ -4,14 +4,14 @@ deps.yarn=1.21.1+build.3
 deps.fabric=0.103.0+1.21.1
 deps.modmenu=11.0.0
 
-deps.yacl=3.5.0+1.21-fabric
+deps.yacl=3.6.2+1.21-fabric
 
-target.sodium=~0.6.0
-deps.sodium=Hd6ChVqe
+target.sodium=0.6.0
+deps.sodium=EoNKHoLH
 
-deps.sodium-extra=lclhI6NO
-deps.moreculling=VNbys2OF
-deps.iris=Kdz76qQt
+deps.sodium-extra=anDafurZ
+deps.moreculling=mNRCywqI
+deps.iris=IzngD3Cy
 deps.entity-view-distance=2NuH7W1K
 
 runtime.cloth=7jtvrmVP
