--- a/versions/1.21.4/gradle.properties
+++ b/versions/1.21.4/gradle.properties
@@ -6,8 +6,8 @@ deps.modmenu=13.0.0-beta.1
 
 deps.yacl=3.6.2+1.21.4-fabric
 
-target.sodium=~0.6.0
-deps.sodium=iPRNybGo
+target.sodium=0.6.0
+deps.sodium=tu8qILqH
 
 deps.sodium-extra=f4TfteNb
 deps.moreculling=W2BKP0eC
