--- a/versions/1.21.3/gradle.properties
+++ b/versions/1.21.3/gradle.properties
@@ -4,10 +4,10 @@ deps.yarn=1.21.3+build.2
 deps.fabric=0.108.0+1.21.3
 deps.modmenu=12.0.0-beta.1
 
-deps.yacl=3.6.1+1.21.2-fabric
+deps.yacl=3.6.2+1.21.2-fabric
 
-target.sodium=~0.6.0
-deps.sodium=qufJMFlM
+target.sodium=0.6.0
+deps.sodium=dsw736d2
 
 deps.sodium-extra=ZQ3k4KzW
 deps.moreculling=YnqEEVHM
