--- a/versions/1.21.1/gradle.properties
+++ b/versions/1.21.1/gradle.properties
@@ -4,14 +4,15 @@ deps.yarn=1.21.1+build.3
 deps.fabric=0.103.0+1.21.1
 deps.modmenu=11.0.0
 
-deps.yacl=3.6.2+1.21-fabric
+deps.yacl=3.6.6+1.21.1-fabric
 
-target.sodium=0.6.0
-deps.sodium=EoNKHoLH
+target.sodium=0.6.9
 
+# https://imb11.github.io/deps/?slugs=sodium%2Csodium-extra%2Cmoreculling%2Ciris%2Centity-view-distance&mcVersion=1.21.1
+deps.sodium=26nVNc41
 deps.sodium-extra=anDafurZ
-deps.moreculling=mNRCywqI
-deps.iris=IzngD3Cy
+deps.moreculling=1V6UtDhN
+deps.iris=zsoi0dso
 deps.entity-view-distance=2NuH7W1K
 
 runtime.cloth=7jtvrmVP
