--- a/versions/1.21.3/gradle.properties
+++ b/versions/1.21.3/gradle.properties
@@ -4,14 +4,15 @@ deps.yarn=1.21.3+build.2
 deps.fabric=0.108.0+1.21.3
 deps.modmenu=12.0.0-beta.1
 
-deps.yacl=3.6.2+1.21.2-fabric
+deps.yacl=3.6.6+1.21.3-fabric
 
-target.sodium=0.6.0
-deps.sodium=dsw736d2
+target.sodium=0.6.9
 
+# https://imb11.github.io/deps/?slugs=sodium%2Csodium-extra%2Cmoreculling%2Ciris%2Centity-view-distance&mcVersion=1.21.3
+deps.sodium=Hp1g50Pm
 deps.sodium-extra=ZQ3k4KzW
-deps.moreculling=YnqEEVHM
-deps.iris=qyGMuaY6
+deps.moreculling=byrWCZgY
+deps.iris=xQYJAYTI
 deps.entity-view-distance=2NuH7W1K
 
 runtime.cloth=JbVSQUVw
