--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: "ubuntu-latest"
     strategy:
       matrix:
-        game_version: [ "1.21.1", "1.21.3", "1.21.5" ]
+        game_version: [ "1.21.1", "1.21.3", "1.21.5", "1.21.8" ]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
