--- a/stonecutter.gradle
+++ b/stonecutter.gradle
@@ -1,4 +1,5 @@
 plugins.apply "dev.kikugie.stonecutter"
+plugins.apply "com.diffplug.spotless"
 stonecutter.active "1.21.11" /* [SC] DO NOT EDIT */
 
 stonecutter.registerChiseled tasks.register("chiseledBuild", stonecutter.chiseled) { 
@@ -9,4 +10,29 @@ stonecutter.registerChiseled tasks.register("chiseledBuild", stonecutter.chisele
 stonecutter.registerChiseled tasks.register("chiseledBuildAndCollect", stonecutter.chiseled) {
     group = "project"
     ofTask("buildAndCollect")
+}
+
+repositories {
+    mavenCentral()
+}
+
+buildscript {
+    repositories {
+        gradlePluginPortal()
+    }
+    dependencies {
+        classpath 'com.diffplug.spotless:spotless-plugin-gradle:6.25.0'
+    }
+}
+
+spotless {
+    java {
+        target fileTree('src') {
+            include '**/*.java'
+        }
+        palantirJavaFormat()
+        removeUnusedImports()
+        trimTrailingWhitespace()
+        endWithNewline()
+    }
 }
