--- a/versions/1.21.10/gradle.properties
+++ b/versions/1.21.10/gradle.properties
@@ -2,6 +2,7 @@ mod.target=>=1.21.9 <=1.21.10
 
 deps.yarn=1.21.10+build.3
 deps.fabric=0.134.1+1.21.9
+deps.fabric.runtime=0.138.4+1.21.10
 deps.modmenu=16.0.0
 
 deps.yacl=3.8.0+1.21.9-fabric
