[feat] added lambdynamiclight support via external menu

--- a/versions/1.21.11/gradle.properties
+++ b/versions/1.21.11/gradle.properties
@@ -3,6 +3,8 @@ mod.target==1.21.11
 deps.yarn=1.21.11+build.4
 deps.fabric=0.141.2+1.21.11
 deps.modmenu=17.0.0-beta.2
+deps.lambdynamiclights=4.9.1+1.21.11
+deps.spruceui=9.1.0+1.21.11
 
 deps.yacl=3.8.2+1.21.11-fabric
 
