--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 
     modCompileOnly ("maven.modrinth:iris:${property('deps.iris')}")
 
+    modImplementation ("dev.lambdaurora.lambdynamiclights:lambdynamiclights-runtime:${property('deps.lambdynamiclights')}")
+    modImplementation ("dev.lambdaurora:spruceui:${property('deps.spruceui')}")
+
     modRuntimeOnly("maven.modrinth:cloth-config:${property('runtime.cloth')}")
 
     include modImplementation("net.caffeinemc:CaffeineConfig:1.3.0+1.17")
