--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ repositories {
 
 dependencies {
     minecraft "com.mojang:minecraft:${stonecutter.current.version}"
-    mappings "net.fabricmc:yarn:${property('deps.yarn')}:v2"
+    mappings loom.officialMojangMappings()
 
     modImplementation "net.fabricmc:fabric-loader:${property("deps.fabric_loader")}"
     modRuntimeOnly "net.fabricmc.fabric-api:fabric-api:${property('deps.fabric')}"
