[fix] ensure sodium dependency imports full implementation, not wrapper

--- a/versions/1.21.11-neoforge/gradle.properties
+++ b/versions/1.21.11-neoforge/gradle.properties
@@ -1,6 +1,7 @@
-mod.target==1.21.11
+mod.target=1.21.11
 
 deps.neoforge=21.11.38-beta
+deps.sodium=0.8.4+mc1.21.11
 deps.lambdynamiclights=4.9.1+1.21.11
 deps.spruceui=9.1.0+1.21.11
 
@@ -9,7 +10,6 @@ deps.yacl=3.8.2+1.21.11-neoforge
 target.sodium=0.8.4
 
 # https://imb11.github.io/deps/?slugs=sodium%2Csodium-extra%2Cmoreculling%2Ciris%2Centity-view-distance&mcVersion=1.21.11&loader=neoforge
-deps.sodium=B0QEOpLx
 deps.sodium-extra=89ShaPSb
 deps.moreculling=9gCMDMbj
 deps.iris=Z0NAv1JK
