[feat] FancyMenu Compat: stop FancyMenu from reinit on every new tab. Initial init on entering Video Settings is still in tact

--- a/versions/1.21.11-neoforge/gradle.properties
+++ b/versions/1.21.11-neoforge/gradle.properties
@@ -13,5 +13,6 @@ target.sodium=0.8.4
 deps.sodium-extra=89ShaPSb
 deps.moreculling=9gCMDMbj
 deps.iris=Z0NAv1JK
+deps.fancymenu=6PJSJuFO
 
 runtime.cloth=Wsus0EWg
