--- a/versions/1.21.11-fabric/gradle.properties
+++ b/versions/1.21.11-fabric/gradle.properties
@@ -14,6 +14,7 @@ deps.sodium=1OWNgWVR
 deps.sodium-extra=yqY1efrC
 deps.moreculling=kWU8mVq5
 deps.iris=ZQx4ktUs
+deps.fancymenu=rbcf4ifM
 deps.entity-view-distance=4DbrCkoK
 
 runtime.cloth=xuX40TN5
